Refine assistant mode settings and input bar icons
- Use AssistantRenderMode display names in the settings dropdown and persist settingValue() values.
- Keep backward compatibility for legacy enum-name render mode values.
- Increase stop-generation icon/button size for clearer visual hierarchy in the composer.