@@ -1,5 +1,7 @@
 package com.github.drafael.chat4j.chat;
 
+import org.apache.commons.lang3.StringUtils;
+
 public enum AssistantRenderMode {
     PREVIEW("preview", "Preview"),
     MARKDOWN("markdown", "Markdown");
@@ -21,12 +23,13 @@ public enum AssistantRenderMode {
     }
 
     public static AssistantRenderMode fromSettingValue(String value) {
-        if (value == null || value.isBlank()) {
+        if (StringUtils.isBlank(value)) {
             return PREVIEW;
         }
 
+        String normalized = value.trim();
         for (AssistantRenderMode mode : values()) {
-            if (mode.settingValue.equalsIgnoreCase(value.trim())) {
+            if (mode.settingValue.equalsIgnoreCase(normalized) || mode.name().equalsIgnoreCase(normalized)) {
                 return mode;
             }
         }
